--- a/trunk/ddscanner/app/src/main/res/drawable/more_photos_bg.xml
+++ b/trunk/ddscanner/app/src/main/res/drawable/more_photos_bg.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/achievement_item_background" />
-    <stroke android:color="#f1f1f1" android:width="1dp" />
+    <solid android:color="@color/black_text" />
     <corners android:radius="2dp" />
 </shape>
