--- a/trunk/ddscanner/app/src/main/res/layout/activity_edit_profile.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_edit_profile.xml
@@ -150,6 +150,7 @@
                                 android:background="@android:color/transparent"
                                 android:hint="Full name"
                                 android:maxLength="32"
+                                android:lines="1"
                                 android:text="@{TextUtils.isEmpty(profileViewModel.user.name) ? null : profileViewModel.user.name}"
                                 android:textSize="16sp" />
                         </LinearLayout>
