--- a/trunk/ddscanner/app/src/main/res/layout/fragment_serach_dive_spot.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/fragment_serach_dive_spot.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white">
+    android:background="#fbfbfb">
     <include layout="@layout/view_no_spots"/>
     <android.support.v7.widget.RecyclerView
         android:id="@+id/spots_list_rc"
