--- a/trunk/ddscanner/app/src/main/res/layout/item_search_dive_spot.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_search_dive_spot.xml
@@ -1,20 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:background="?attr/selectableItemBackground"
-    android:layout_height="54dp">
-    <TextView
-        android:id="@+id/diveSpotName"
-        tools:text = "Good spot"
+    android:layout_height="62dp">
+    <LinearLayout
         android:paddingLeft="20dp"
-        android:fontFamily="sans-serif-medium"
-        android:textColor="@color/black_text"
-        android:gravity="center_vertical"
         android:layout_width="match_parent"
-        android:layout_height="53dp" />
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:orientation="vertical">
+        <TextView
+            android:id="@+id/diveSpotName"
+            tools:text = "Good spot"
+            android:textColor="@color/black_text"
+            android:gravity="center_vertical"
+            android:fontFamily="sans-serif"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="15sp"/>
+
+        <TextView
+            android:id="@+id/country"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="13sp"
+            android:fontFamily="sans-serif"
+            android:textStyle="normal"
+            android:textColor="#a3a3a3"
+            android:letterSpacing="0.01"
+            android:text="Thailand"
+            />
+
+    </LinearLayout>
     <ImageView
+        android:layout_alignParentBottom="true"
         android:paddingLeft="20dp"
         style="@style/DividerStyleFull" />
-</LinearLayout>
+</RelativeLayout>
