--- a/trunk/ddscanner/app/src/main/res/layout/activity_search_sealife.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_search_sealife.xml
@@ -29,31 +29,37 @@
         android:id="@+id/not_found_layout"
         android:visibility="gone"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center">
-        <ImageView
-            android:id="@+id/icon"
-            android:layout_centerHorizontal="true"
-            android:layout_width="wrap_content"
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_marginTop="35dp"
+            android:gravity="center_horizontal"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_nosealife"/>
-        <TextView
-            android:layout_below="@+id/icon"
-            android:id="@+id/text_not_found"
-            style="@style/ErrorsViewTitleStyle"
-            android:text="@string/no_results"
-            />
-        <Button
-            android:visibility="visible"
-            android:layout_marginTop="170dp"
-            android:layout_below="@+id/text_not_found"
-            android:id="@+id/add_manualy"
-            android:layout_width="180dp"
-            android:layout_height="45dp"
-            android:text="@string/add_new"
-            style="@style/OrangeButtons"
-            android:textSize="15sp"
-            android:layout_centerInParent="true" />
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="15sp"
+                android:fontFamily="sans-serif"
+                android:textStyle="normal"
+                android:textColor="#a3a3a3"
+                android:gravity="center_horizontal"
+                android:text="@string/no_results_found"
+                />
+
+            <TextView
+                android:id="@+id/add_manualy"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="15sp"
+                android:fontFamily="sans-serif"
+                android:textStyle="normal"
+                android:textColor="#526cae"
+                android:gravity="center_horizontal"
+                android:text="@string/add_new_spots"
+                />
+
+        </LinearLayout>
     </RelativeLayout>
     <android.support.v7.widget.RecyclerView
         android:layout_marginTop="10dp"
