--- a/trunk/ddscanner/app/src/main/res/layout/view_no_location_found.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/view_no_location_found.xml
@@ -9,14 +9,18 @@
         android:gravity="center_horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
-        <ImageView
-            android:layout_marginTop="95dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_nospots"/>
+        android:orientation="horizontal">
         <TextView
-            style="@style/ErrorsViewTitleStyle"
-            android:text="@string/no_results"/>
+            android:layout_marginTop="35dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="15sp"
+            android:fontFamily="sans-serif"
+            android:textStyle="normal"
+            android:textColor="#a3a3a3"
+            android:gravity="center_horizontal"
+            android:text="@string/no_results_found"
+            />
+
     </LinearLayout>
 </ScrollView>
