--- a/trunk/ddscanner/app/src/main/res/layout/item_photo_liked.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_photo_liked.xml
@@ -33,7 +33,6 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_margin="14dp"
-                android:src="@color/black_text"
                 app:loadAvatarFrom="@{likeViewModel}"
                 android:onClick="@{handlers::avatarClicked}"/>
 
@@ -76,8 +75,7 @@
                         android:onClick="@{handlers::photoClicked}"
                         app:loadPhotoFrom="@{likeViewModel}"
                         android:layout_width="40dp"
-                        android:layout_height="40dp"
-                        android:src="@color/black_text"/>
+                        android:layout_height="40dp" />
 
                 </LinearLayout>
             </RelativeLayout>
