--- a/trunk/ddscanner/app/src/main/res/layout/activity_dive_spot_details.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_dive_spot_details.xml
@@ -34,8 +34,9 @@
             <android.support.design.widget.AppBarLayout
                 android:id="@+id/app_bar_layout"
                 android:layout_width="match_parent"
-                android:layout_height="180dp"
-                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+                android:layout_height="200dp"
+                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+                android:fitsSystemWindows="true">
 
                 <android.support.design.widget.CollapsingToolbarLayout
                     android:id="@+id/collapsing_toolbar"
@@ -43,19 +44,22 @@
                     android:layout_height="match_parent"
                     app:contentScrim="@color/primary"
                     app:layout_scrollFlags="scroll|exitUntilCollapsed"
-                    app:popupTheme="@style/ToolbarMenuStyle">
+                    app:popupTheme="@style/ToolbarMenuStyle"
+                    android:fitsSystemWindows="true">
 
                     <RelativeLayout
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent">
+                        android:layout_height="match_parent"
+                        android:fitsSystemWindows="true">
 
                         <ImageView
                             android:id="@+id/main_photo"
                             android:layout_width="match_parent"
-                            android:layout_height="180dp"
+                            android:layout_height="200dp"
                             android:fitsSystemWindows="true"
                             android:scaleType="centerCrop"
-                            app:loadMainImageFrom="@{diveSpotViewModel}" />
+                            app:loadMainImageFrom="@{diveSpotViewModel}"
+                            />
 
                         <TextView
                             android:id="@+id/newDiveSpot"
