--- a/trunk/ddscanner/app/src/main/res/layout/activity_dive_spot_details.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_dive_spot_details.xml
@@ -17,15 +17,9 @@
             type="com.ddscanner.screens.divespot.details.DiveSpotDetailsActivity" />
     </data>
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
 
-        <include layout="@layout/view_connection_error" />
 
-        <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
+        <android.support.design.widget.CoordinatorLayout
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/main_layout"
             android:layout_width="match_parent"
@@ -660,5 +654,5 @@
                 android:scaleType="center"/>
 
         </android.support.design.widget.CoordinatorLayout>
-    </RelativeLayout>
+
 </layout>
