* max lines in edit texts

--- a/trunk/ddscanner/app/src/main/res/layout/activity_forgot_password.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_forgot_password.xml
@@ -30,6 +30,8 @@
             android:layout_marginTop="28dp"
             android:hint="@string/ema"
             android:paddingLeft="15dp"
+            android:inputType="textEmailAddress"
+            android:maxLines="1"
             android:paddingRight="15dp"/>
         <Button
             android:id="@+id/send"
