--- a/trunk/ddscanner/app/src/main/res/layout/edit_dive_center_edit_text.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/edit_dive_center_edit_text.xml
@@ -13,7 +13,8 @@
         android:inputType="phone"
         android:lines="1"
         android:maxLength="32"
-        android:paddingTop="10dp" />
+        android:paddingTop="10dp"
+        android:maxLines="1"/>
 
     <TextView
         android:layout_marginLeft="0dp"
