--- a/trunk/ddscanner/app/src/main/res/layout/add_email_layout.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/add_email_layout.xml
@@ -5,4 +5,5 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:hint="@string/email"
+    android:maxLines="1"
     xmlns:android="http://schemas.android.com/apk/res/android" />
