--- a/trunk/ddscanner/app/src/main/res/layout/item_dive_center_search.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_dive_center_search.xml
@@ -12,5 +12,41 @@
         android:layout_height="55dp"
         tools:background="@drawable/ds_head_photo_def"/>
 
-
+    <LinearLayout
+        android:layout_toRightOf="@+id/dive_center_photo"
+        android:layout_width="wrap_content"
+        android:layout_height="55dp"
+        android:layout_marginTop="18dp"
+        android:layout_marginLeft="20dp"
+        android:gravity="center_vertical"
+        android:orientation="vertical">
+        <TextView
+            android:lines="1"
+            android:ellipsize="end"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="18sp"
+            android:fontFamily="sans-serif"
+            android:textStyle="normal"
+            android:textColor="@color/black_text"
+            tools:text="Aquacenter Russia"
+            />
+        <TextView
+            android:lines="1"
+            android:ellipsize="end"
+            android:layout_marginTop="8dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="12sp"
+            android:fontFamily="sans-serif"
+            android:textStyle="normal"
+            android:textColor="#a3a3a3"
+            android:letterSpacing="0.02"
+            android:lineSpacingExtra="1.5sp"
+            tools:text="Steigenberger Al Dau Resort, Yussif Affifi..."
+            />
+    </LinearLayout>
+    <ImageView
+        style="@style/DividerStyleFull"
+        android:layout_alignParentBottom="true"/>
 </RelativeLayout>
