--- a/trunk/ddscanner/app/src/main/res/layout/item_review_liked_likes_activity.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_review_liked_likes_activity.xml
@@ -42,6 +42,7 @@
 
                 <TextView
                     android:id="@+id/text"
+                    android:layout_marginRight="14dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/black_text"
