--- a/trunk/ddscanner/app/src/main/res/layout/item_dive_center_search.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_dive_center_search.xml
@@ -3,14 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="85dp">
+    android:layout_height="85dp"
+    android:background="?attr/selectableItemBackground">
     <ImageView
         android:id="@+id/dive_center_photo"
         android:layout_marginTop="18dp"
         android:layout_marginLeft="14dp"
         android:layout_width="55dp"
         android:layout_height="55dp"
-        tools:background="@drawable/ds_head_photo_def"/>
+        android:scaleType="centerCrop"
+        tools:src="@drawable/avatar_dc_profile_def"/>
 
     <LinearLayout
         android:layout_toRightOf="@+id/dive_center_photo"
@@ -30,11 +32,12 @@
             android:textStyle="normal"
             android:textColor="@color/black_text"
             tools:text="Aquacenter Russia"
+            android:id="@+id/dive_center_name"
             />
         <TextView
             android:lines="1"
             android:ellipsize="end"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="6dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="12sp"
@@ -44,9 +47,11 @@
             android:letterSpacing="0.02"
             android:lineSpacingExtra="1.5sp"
             tools:text="Steigenberger Al Dau Resort, Yussif Affifi..."
+            android:id="@+id/dive_center_address"
             />
     </LinearLayout>
     <ImageView
+        android:layout_marginLeft="89dp"
         style="@style/DividerStyleFull"
         android:layout_alignParentBottom="true"/>
 </RelativeLayout>
