--- a/trunk/ddscanner/app/src/main/res/layout/activity_new_dive_center.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_new_dive_center.xml
@@ -2,6 +2,11 @@
 <layout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+    <data>
+        <variable
+            name="handlers"
+            type="com.ddscanner.screens.profile.edit.divecenter.search.CreateDiveCenterActivity" />
+    </data>
 <android.support.design.widget.CoordinatorLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -43,7 +48,7 @@
                 android:layout_marginLeft="20dp"
                 android:textColorHint="#bbbbbb"
                 android:textSize="15sp"
-                android:maxLength="64"
+                android:maxLength="32"
                 app:et_dividerColor="#dedede"
                 app:et_dividerCompoundPadding="true"
                 app:et_dividerHeight="1dp"
@@ -69,7 +74,7 @@
                 android:layout_marginLeft="20dp"
                 android:textColorHint="#bbbbbb"
                 android:textSize="15sp"
-                android:maxLength="64"
+                android:maxLength="254"
                 app:et_dividerColor="#dedede"
                 app:et_dividerCompoundPadding="true"
                 app:et_dividerHeight="1dp"
@@ -79,7 +84,7 @@
 
             <TextView
                 android:layout_marginLeft="20dp"
-                android:text="@string/name_is_required_dc"
+                android:text="@string/email_incorrect"
                 android:id="@+id/email_error"
                 style="@style/ValidationErrorTextView" />
             <TextView
@@ -101,6 +106,7 @@
             style="@style/OrangeButtons"
             android:layout_margin="20dp"
             android:textAllCaps="false"
+            android:onClick="@{handlers::saveData}"
             android:text="@string/invite_a_dive_center"/>
     </LinearLayout>
 </android.support.design.widget.CoordinatorLayout>
