--- a/trunk/ddscanner/app/src/main/res/layout/activity_new_dive_center.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_new_dive_center.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
     <data>
         <variable
             name="handlers"
@@ -17,7 +17,7 @@
         <include layout="@layout/view_toolbar" />
         <LinearLayout
             android:paddingTop="20dp"
-            android:paddingBottom="31dp"
+            android:paddingBottom="12dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white"
@@ -97,6 +97,66 @@
                 android:textStyle="normal"
                 android:textColor="#a3a3a3"
                 android:text="@string/please_check_the_email_before_inviting_the_dive_center"
+                />
+
+            <ImageView
+                android:layout_marginTop="15dp"
+                style="@style/DividerStyleFull" />
+            <LinearLayout
+                android:id="@+id/address_layout"
+                android:visibility="gone"
+                android:layout_marginLeft="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+                <com.rey.material.widget.EditText
+                    android:id="@+id/address"
+                    style="@style/DiveCenterProfileEditText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="10dp"
+                    android:hint="@string/address"
+                    />
+                <TextView
+                    android:id="@+id/edit_dive_center_address"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="14sp"
+                    android:fontFamily="sans-serif-medium"
+                    android:textColor="#3b528b"
+                    android:text="@string/edit_addres"
+                    android:paddingTop="8dp"
+                    android:paddingBottom="8dp"
+                    android:onClick="@{handlers::editAddressClicked}"/>
+            </LinearLayout>
+            <Button
+                style="@style/BlueButton"
+                android:id="@+id/pick_address_button"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="4dp"
+                android:text="@string/choose_address"
+                android:textColor="#c4ceee"
+                android:textAllCaps="true"
+                android:onClick="@{handlers::chooseAddressClicked}"/>
+            <TextView
+                android:layout_marginLeft="20dp"
+                android:text="@string/address_is_required"
+                android:id="@+id/address_error"
+                style="@style/ValidationErrorTextView" />
+            <TextView
+                android:layout_marginLeft="20dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="12sp"
+                android:fontFamily="sans-serif"
+                android:textStyle="normal"
+                android:textColor="#a3a3a3"
+                android:layout_marginTop="8dp"
+                android:text="@string/provide_your_address_to_be_shown_on_the_map"
                 />
         </LinearLayout>
         <ImageView
