--- a/trunk/ddscanner/app/src/main/res/layout/item_dive_center_search.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_dive_center_search.xml
@@ -7,7 +7,14 @@
     android:paddingLeft="20dp"
     android:background="?attr/selectableItemBackground"
     tools:ignore="RtlSymmetry">
+    <ImageView
+        android:layout_width="42dp"
+        android:layout_height="42dp"
+        android:layout_centerVertical="true"
+        android:id="@+id/dive_center_photo"/>
     <LinearLayout
+        android:layout_marginLeft="18dp"
+        android:layout_toRightOf="@+id/dive_center_photo"
         android:layout_centerVertical="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -41,7 +48,7 @@
             />
     </LinearLayout>
     <ImageView
-        android:layout_marginLeft="89dp"
+        android:layout_marginLeft="60dp"
         style="@style/DividerStyleFull"
         android:layout_alignParentBottom="true"/>
 </RelativeLayout>
