--- a/trunk/ddscanner/app/src/main/res/layout/activity_edit_profile.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_edit_profile.xml
@@ -243,6 +243,7 @@
                         <ImageView
                             style="@style/CharacteristicsDiveSpotListIcons"
                             android:layout_height="wrap_content"
+                            android:layout_marginTop="8dp"
                             android:src="@drawable/ic_profile_level" />
 
                         <android.support.v7.widget.AppCompatSpinner
