--- a/trunk/ddscanner/app/src/main/res/layout/activity_dive_centers.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_dive_centers.xml
@@ -5,12 +5,15 @@
     android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <include layout="@layout/view_toolbar" />
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <include layout="@layout/view_no_contacts"/>
+<RelativeLayout
+    android:id="@+id/main_layout_view"
+    android:visibility="gone"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-
     <android.support.design.widget.CoordinatorLayout
         android:id="@+id/map_view"
         android:layout_width="match_parent"
