+ about ddscanner button in divecenter profile

--- a/trunk/ddscanner/app/src/main/res/layout/fragment_profile.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/fragment_profile.xml
@@ -660,7 +660,8 @@
                                 />
                         </LinearLayout>
                     </LinearLayout>
-
+                    <ImageView
+                        style="@style/DividerStyleFull" />
                 </LinearLayout>
             </ScrollView>
 
