--- a/trunk/ddscanner/app/src/main/res/layout/activity_main.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <android.support.v7.widget.Toolbar
+        <RelativeLayout
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?actionBarSize"
@@ -19,13 +19,7 @@
             android:contentInsetLeft="0dp"
             android:contentInsetRight="0dp"
             android:contentInsetStart="0dp"
-            android:minHeight="?actionBarSize"
-            app:contentInsetEnd="0dp"
-            app:contentInsetLeft="0dp"
-            app:contentInsetRight="0dp"
-            app:contentInsetStart="0dp"
-            auto:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-            auto:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+            android:minHeight="?actionBarSize">
 
             <android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -87,7 +81,7 @@
                         app:layout_widthPercent="50%" />
                 </android.support.percent.PercentRelativeLayout>
             </android.support.percent.PercentRelativeLayout>
-        </android.support.v7.widget.Toolbar>
+        </RelativeLayout>
 
         <android.support.v4.view.ViewPager
             android:id="@+id/main_viewpager"
