--- a/trunk/ddscanner/app/src/main/res/layout/tab_notification_item.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/tab_notification_item.xml
@@ -1,4 +1,6 @@
-<ImageView android:layout_width="wrap_content"
+<ImageView
+    android:id="@+id/notification_image_view"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:src="@drawable/selector_tab_notifications"
     xmlns:android="http://schemas.android.com/apk/res/android" />
