--- a/trunk/ddscanner/app/src/main/res/layout/fragment_maplist.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/fragment_maplist.xml
@@ -79,6 +79,8 @@
             android:layout_width="match_parent"
             android:layout_height="93dp"
             android:layout_gravity="bottom"
+            android:foreground="?android:attr/selectableItemBackground"
+            android:clickable="true"
             android:visibility="gone" />
 
 
