+ now phone numbers and emails are clickable in dive center profile fragment

--- a/trunk/ddscanner/app/src/main/res/values/colors.xml
+++ b/trunk/ddscanner/app/src/main/res/values/colors.xml
@@ -87,4 +87,6 @@
 
     <color name="swipe_refresh_angle_color">#526CAE</color>
 
+    <color name="dive_center_charachteristic_color">#8b8b8b</color>
+
 </resources>
