--- a/trunk/ddscanner/app/src/main/res/values/styles.xml
+++ b/trunk/ddscanner/app/src/main/res/values/styles.xml
@@ -350,7 +350,7 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textSize">14sp</item>
-        <item name="android:textColor">#8b8b8b</item>
+        <item name="android:textColor">@color/dive_center_charachteristic_color</item>
         <item name="android:layout_marginTop">3dp</item>
     </style>
 
