--- a/trunk/ddscanner/app/src/main/res/values/attrs.xml
+++ b/trunk/ddscanner/app/src/main/res/values/attrs.xml
@@ -11,4 +11,8 @@
         <attr name="block_subtitle" format="string" />
     </declare-styleable>
 
+    <declare-styleable name="EditTextWithErrorView">
+        <attr name="maxLength" format="integer"/>
+    </declare-styleable>
+
 </resources>
