--- a/trunk/ddscanner/app/src/main/res/layout/edit_dive_center_email_edit_text.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/edit_dive_center_email_edit_text.xml
@@ -2,8 +2,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
-<com.rey.material.widget.EditText android:id="@+id/email"
+<android.support.design.widget.TextInputLayout
+    android:id="@+id/textInputLayout"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+<EditText android:id="@+id/email"
     style="@style/DiveCenterProfileEditText"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -12,14 +17,15 @@
     android:maxLength="252"
     android:inputType="textEmailAddress"
     android:maxLines="1"
+    app:backgroundTint="#dedede"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:drawableRight="@drawable/ic_addds_delete"
     android:paddingRight="15dp"
     />
-
+</android.support.design.widget.TextInputLayout>
     <TextView
         android:layout_marginLeft="0dp"
-        android:layout_below="@+id/email"
+        android:layout_below="@+id/textInputLayout"
         android:text="@string/enter_a_valid_email_address"
         android:id="@+id/email_error"
         style="@style/ValidationErrorTextView" />
