--- a/trunk/ddscanner/app/src/main/res/layout/view_input_phone_layout.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/view_input_phone_layout.xml
@@ -8,7 +8,6 @@
     android:layout_height="wrap_content"
     android:id="@+id/linearLayout">
     <com.hbb20.CountryCodePicker
-        android:layout_centerVertical="true"
         android:id="@+id/ccp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -18,20 +17,26 @@
         android:layout_toRightOf="@+id/ccp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-    <com.rey.material.widget.EditText
+    <EditText
         android:id="@+id/edit_text"
-        android:maxLength="20"
+        android:maxLength="19"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="34dp"
         android:textSize="15sp"
-        et_labelEnable="false"
         android:hint="@string/phone"
         android:inputType="phone"
         android:background="@null"
         android:layout_toLeftOf="@+id/ic_delete"
         android:paddingRight="15dp"
-        android:drawableRight="@drawable/ic_addds_delete"
         />
+        <ImageView
+            android:id="@+id/ic_delete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_addds_delete"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:paddingHorizontal="15dp"/>
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
@@ -40,8 +45,9 @@
 
     </RelativeLayout>
     <TextView
+        android:layout_toRightOf="@+id/ccp"
         android:layout_below="@+id/ccp"
-        android:layout_marginLeft="0dp"
+        android:layout_marginLeft="15dp"
         android:text="@string/enter_a_valid_phone_number"
         android:id="@+id/phone_error"
         style="@style/ValidationErrorTextView" />
